Added max length to input fields
Added max length to input fields on application.html and added recalculation of amount when deleting a row in application.js

--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -146,6 +146,7 @@
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Förnamn" type="text" name="firstName" data-id={row.id} value={row.firstName}
                                                                  title="Förnamn får endast innehålla bokstäver och bindestreck"
+                                                                 max-length="50"
                                                                  read-only={isCertify}
                                                                  required={isApply}
                                                                  onchange={handleInputChange}></lightning-input>
@@ -160,6 +161,7 @@
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Efternamn" type="text" name="lastName" data-id={row.id} value={row.lastName}
                                                                  title="Efternamn får endast innehålla bokstäver och bindestreck"
+                                                                 max-length="50"
                                                                  read-only={isCertify}
                                                                  required={isApply}
                                                                  onchange={handleInputChange}></lightning-input>
@@ -232,6 +234,7 @@
                                         data-field="XC_SiblingsAge__c"
                                         value={form.XC_SiblingsAge__c}
                                         type="text"
+                                        max-length="3"
                                         label="Ålder på övriga syskon som bor hemma"
                                         onchange={inputChange}
                                         class="slds-var-m-left_medium">
@@ -299,7 +302,7 @@
                                             </td>
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Vid annat, beskriv" type="text" name="description" required={row.descriptionRequired}
-                                                                 data-id={row.id} value={row.description} disabled={row.descriptionDisabled}
+                                                                 data-id={row.id} value={row.description} max-length="100" disabled={row.descriptionDisabled}
                                                                  onchange={handleSecondInputChange}></lightning-input>
                                                 <div if:true={isCertify}>
                                                     <label for="xcDescription" class="slds-form-element__label slds-no-flex">
@@ -310,7 +313,7 @@
                                             </td>
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Vid terminsavgift, ange förening/klubb" type="text" name="association" required={row.associationRequired}
-                                                                 data-id={row.id} value={row.association} disabled={row.associationDisabled}
+                                                                 data-id={row.id} value={row.association} disabled={row.associationDisabled} max-length="50"
                                                                  onchange={handleSecondInputChange}></lightning-input>
                                                 <div if:true={isCertify}>
                                                     <label for="xcAssociation" class="slds-form-element__label slds-no-flex">
@@ -334,7 +337,7 @@
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Skriv totalt belopp ex. 3000" type="number" name="amount" required="true"
                                                                  data-id={row.id} value={row.amount} pattern="[1-9]+[0-9]*" message-when-pattern-mismatch="Endast siffor. Måste vara > 0"
-                                                                 onchange={handleSecondInputChange}></lightning-input>
+                                                                 onchange={handleSecondInputChange} max-length="6"></lightning-input>
                                                 <div if:true={isCertify}>
                                                     <label for="xcAmount" class="slds-form-element__label slds-no-flex">
                                                         Skriv totalt belopp ex. 3000
@@ -463,6 +466,7 @@
                                         data-validity-check="true"
                                         required={isApply}
                                         read-only={isCertify}
+                                        max-length="100"
                                         data-field="XC_Vardnadshavare__c"
                                         field-level-help="Texta förnamn & efternamn. Majblomman kommunicerar med den här vårdnadshavaren."
                                         value={form.XC_Vardnadshavare__c} type="text"
@@ -481,6 +485,7 @@
                                             message-when-value-missing="Fyll i detta fält"
                                             data-validity-check="true"
                                             read-only={isPerson2Readonly}
+                                            max-length="100"
                                             data-field="XC_Vardnadshavare1__c"
                                             required={isPerson2Required}
                                                      disabled={isPerson2Readonly}
@@ -529,6 +534,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="150"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="XC_Bostadsadress__c"
@@ -565,6 +571,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         read-only={isCertify}
                                         data-field="XC_Lagenhetsnummer__c"
                                         value={form.XC_Lagenhetsnummer__c}
@@ -604,6 +611,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="40"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="XC_Ort__c"
@@ -623,6 +631,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="254"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="XC_Epost__c"
@@ -641,6 +650,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="254"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="Confirm_XC_Epost__c"
@@ -658,6 +668,7 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="20"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="XC_Telefonnummer__c"
@@ -687,6 +698,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -702,6 +714,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -717,6 +730,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -732,6 +746,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -747,6 +762,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -762,6 +778,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -777,6 +794,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -792,6 +810,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -807,6 +826,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -822,6 +842,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -837,6 +858,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="10"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-input-type="finance"
@@ -911,6 +933,7 @@
                             <lightning-layout-item size="12" medium-device-size="12" padding="horizontal-small">
                                 <lightning-textarea if:true={isApply}
                                         min-length="20"
+                                        max-length="1500"
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
                                         required={isApply}
@@ -946,6 +969,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="100"
                                         read-only={isCertify}
                                         data-field="XC_BankensNamn__c"
                                         value={form.XC_BankensNamn__c}
@@ -984,6 +1008,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="200"
                                         read-only={isCertify}
                                         data-field="XC_Kontoinnehavarens__c"
                                         value={form.XC_Kontoinnehavarens__c}
@@ -1008,6 +1033,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="254"
                                         required={certifierRequired}
                                         data-field="XC_IntygsskrivarensEpost__c"
                                         value={form.XC_IntygsskrivarensEpost__c}
@@ -1020,6 +1046,7 @@
                                 <lightning-input
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        max-length="254"
                                         required={certifierRequired}
                                         data-field="Confirm_XC_IntygsskrivarensEpost__c"
                                         value={form.Confirm_XC_IntygsskrivarensEpost__c}
