--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -121,6 +121,12 @@
                                     <template if:true={nextApplicationDates}>Nästkommande ansökningsdatum: {nextApplicationDates}<br/></template>
                                 </div>
                             </template>
+                            <template if:true={isRiks}>
+                                <h2><b>Vi besvarar alla ansökningar per brev.</b></h2>
+                                <h2><b>Ansökningar behandlas löpande under året. Uppehåll i juli månad.</b> <br/> Beslut skickas inom 8-10 veckor efter inkommen ansökan. <br/> 
+                                    Har du frågor? Mejla: 
+                                    <a href="mailto:bidrag@majblomman.se">bidrag@majblomman.se</a></h2>
+                            </template>
                         </template>
                     </div>
                 </lightning-layout-item>
