Updates ApplicationFormService, Application, ApplicationTree
ApplicationFormService: Getting more fields for preselectedLF function. Application: Added new Text for Riks and deleting unused code (a flow has this functionallity already). applicationTree: Avslå button always visible as requested from customer

--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -127,6 +127,12 @@
                                     Har du frågor? Mejla: 
                                     <a href="mailto:bidrag@majblomman.se">bidrag@majblomman.se</a></h2>
                             </template>
+                            <template if:true={isRiks}>
+                                <h2><b>Vi besvarar alla ansökningar per brev.</b></h2>
+                                <h2><b>Ansökningar behandlas löpande under året. Uppehåll i juli månad.</b> <br/> Beslut skickas inom 8-10 veckor efter inkommen ansökan. <br/> 
+                                    Har du frågor? Mejla: 
+                                    <a href="mailto:bidrag@majblomman.se">bidrag@majblomman.se</a></h2>
+                            </template>
                         </template>
                     </div>
                 </lightning-layout-item>
